// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div
    className="page-header"
>
    <div
        className="content-container"
    >
        <h1
            className="page-header__title"
        >
            Viewing 
            <span>
                1
            </span>
             
            expense
             totalling 
            <span>
                $2.35
            </span>
        </h1>
        <div
            className="page-header__actions"
        >
            <Link
                className="button"
                replace={false}
                to="/create"
            >
                Add Expense
            </Link>
        </div>
    </div>
</div>,
  "nodes": Array [
    <div
      className="page-header"
>
      <div
            className="content-container"
      >
            <h1
                  className="page-header__title"
            >
                  Viewing 
                  <span>
                        1
                  </span>
                   
                  expense
                   totalling 
                  <span>
                        $2.35
                  </span>
            </h1>
            <div
                  className="page-header__actions"
            >
                  <Link
                        className="button"
                        replace={false}
                        to="/create"
                  >
                        Add Expense
                  </Link>
            </div>
      </div>
</div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_context": Object {},
    "_element": <ExpensesSummary
      expenseCount={1}
      expensesTotal={235}
/>,
    "_instance": null,
    "_newState": null,
    "_rendered": <div
      className="page-header"
>
      <div
            className="content-container"
      >
            <h1
                  className="page-header__title"
            >
                  Viewing 
                  <span>
                        1
                  </span>
                   
                  expense
                   totalling 
                  <span>
                        $2.35
                  </span>
            </h1>
            <div
                  className="page-header__actions"
            >
                  <Link
                        className="button"
                        replace={false}
                        to="/create"
                  >
                        Add Expense
                  </Link>
            </div>
      </div>
</div>,
    "_rendering": false,
    "_updater": Updater {
      "_renderer": [Circular],
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <ExpensesSummary
    expenseCount={1}
    expensesTotal={235}
/>,
}
`;

exports[`should correctly render ExpensesSummary with multiple expenses 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div
    className="page-header"
>
    <div
        className="content-container"
    >
        <h1
            className="page-header__title"
        >
            Viewing 
            <span>
                23
            </span>
             
            expenses
             totalling 
            <span>
                $235,123,409.87
            </span>
        </h1>
        <div
            className="page-header__actions"
        >
            <Link
                className="button"
                replace={false}
                to="/create"
            >
                Add Expense
            </Link>
        </div>
    </div>
</div>,
  "nodes": Array [
    <div
      className="page-header"
>
      <div
            className="content-container"
      >
            <h1
                  className="page-header__title"
            >
                  Viewing 
                  <span>
                        23
                  </span>
                   
                  expenses
                   totalling 
                  <span>
                        $235,123,409.87
                  </span>
            </h1>
            <div
                  className="page-header__actions"
            >
                  <Link
                        className="button"
                        replace={false}
                        to="/create"
                  >
                        Add Expense
                  </Link>
            </div>
      </div>
</div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_context": Object {},
    "_element": <ExpensesSummary
      expenseCount={23}
      expensesTotal={23512340987}
/>,
    "_instance": null,
    "_newState": null,
    "_rendered": <div
      className="page-header"
>
      <div
            className="content-container"
      >
            <h1
                  className="page-header__title"
            >
                  Viewing 
                  <span>
                        23
                  </span>
                   
                  expenses
                   totalling 
                  <span>
                        $235,123,409.87
                  </span>
            </h1>
            <div
                  className="page-header__actions"
            >
                  <Link
                        className="button"
                        replace={false}
                        to="/create"
                  >
                        Add Expense
                  </Link>
            </div>
      </div>
</div>,
    "_rendering": false,
    "_updater": Updater {
      "_renderer": [Circular],
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <ExpensesSummary
    expenseCount={23}
    expensesTotal={23512340987}
/>,
}
`;
